added instruction about search

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>PokéDom</title>
   </head>
     <h1>PokéDom- gotta code 'em all!</h1>
+    <h3>Currently search allow only to search pokemon by name or pokemon by type. And not at the same time.</h3>
     <input class="searchByName" placeholder="Search pokemon by name" style="width:250px;"></input>
     Search by type
     <select id="type">
